Salesforce/main/default/objects/Docusign_Config__mdt/Docusign_Config__mdt.object-meta.xml
<CustomObject>
    <label>Docusign Config</label>
    <pluralLabel>Docusign Configs</pluralLabel>
</CustomObject>