Salesforce/main/default/objects/Docusign_Config__mdt/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>