Salesforce/main/default/objects/Docusign_Config__mdt/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>