Salesforce/main/default/objects/Docusign_Config__mdt/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <inlineHelpText>Alias: Client Id</inlineHelpText>
    <label>Integration Key</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>